--- a/index.html
+++ b/index.html
@@ -1,8 +1,76 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
+<head>	
+    <link href="style.css" rel='stylesheet' type="text/css">
 </head>
 <body>
-	<h1>website</h1>
+    <aside>
+        <a href="f1 homepage.html"><img src="f1logo.png" alt="logo" width="128.5px" height="80px"></a>   
+        <ul>
+          <li><a href="#introduction" >introduction</a></li>
+          <li><a href="#theme song">theme song</a></li> 
+          <li><a href="#ranking" >ranking</a></li>
+          <li><a href="#regulations">new regulations</a></li>
+          <li><a href="#f124">f1 game</a></li>
+        </ul> 
+    </aside>
+      
+    <main id="main">
+        <ul class="navbar">
+            <li><a href="drivers.html">drivers and constructors</a></li>
+            <li><a href="schedule.html">schedule 2024</a></li>
+            <li><a href="form.html">survey</a></li>
+        </ul>
+        <br>
+        <br>
+        <br>
+    <center>
+	<h1><i>FORMULA 1</i></h1>
+	<a name="introduction"><iframe width="560" height="315" src="https://www.youtube.com/embed/Q-jjZMMxbZs?si=AiGesBIJiwvtrFmU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	<h2>↑click to watch introduction of F1</h2>
+    <hr>
+    <a name="theme song"><audio controls>
+      <source src="themesong.mp3"> 
+    </audio> 
+    <iframe style="border-radius:12px;" src="https://open.spotify.com/embed/track/5r7egnfTIQjaKSGREhIky9?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+	<h2><a name="ranking">theme song</h2>
+	<hr>
+    <h2>top 5 drivers right now</h2>
+    <table>
+    <tr>
+        <th>driver</th>
+        <th>points</th>
+    </tr>
+    <tr>
+        <td>Max Verstappen</td>
+        <td>303</td>
+    </tr>
+    <tr>
+        <td>Lando Norris</td>
+        <td>241</td>
+    </tr>
+    <tr>
+        <td>Charles Leclerc</td>
+        <td>217</td>
+    </tr>
+    <tr>
+        <td>Oscar Piastri</td>
+        <td>197</td>
+    </tr>
+    <tr>
+        <td>Carlos Sainz</td>
+        <td>184</td>
+    </tr>
+    </table>
+    <a name="regulations"> 
+    <hr>
+    <embed src='regulations.pdf' width='300px' height='600px'></embed>
+    <h2>2026 new regulations</h2>
+    <hr>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/gHejAiV-Dl4?si=acbCuelN84GcFLNa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <h3>↑<br><a name="f124">F1 24 released on 5.28</h3>
+    </center>
+    </main>
+
 </body>
 </html>
