--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <aside>
-        <a href="f1 homepage.html"><img src="f1logo.png" alt="logo" width="128.5px" height="80px"></a>   
+        <a href="index.html"><img src="f1logo.png" alt="logo" width="128.5px" height="80px"></a>   
         <ul>
           <li><a href="#introduction" >introduction</a></li>
           <li><a href="#theme song">theme song</a></li> 
